home page location section mobiles issue

--- a/assets/universal.css
+++ b/assets/universal.css
@@ -12,6 +12,14 @@ body {
   --yellow: #ffdb6d;
 }
 
+
+/********** Default Font *********/
+[data-font-size="23px"] {
+  font-size: clamp(18px, 2vw, 23px);
+}
+/********** Default Font *********/
+
+
 @font-face {
   font-family: 'PlayfairDisplay-Regular';
   src: url('../fonts/PlayfairDisplay-Regular.ttf');
@@ -97,11 +105,7 @@ body {
 /********** Font Family - Variable *********/
 
 
-
-
 /********** Default Color *********/
-
-
 /*** BG Color **/
 [data-bgcolor="light"] {
   background-color: #EAE0D6;
